Fix compile error after backport